# quant-lab

./: .gitignore  .pdca-status.json  CLAUDE.md  GEMINI.md  README.md  ai_config.py  aliases.sh  analyst_base.py  analyst_brain.py  analyst_cache.py  analyst_data.py  analyst_fund.py  analyst_integration.py  analyst_openbb.py  data_cache.py  main.py  md2pdf_tool.py  pyproject.toml  stock_finder.py  valuation_analyzer.py
api/: app.py  (+3 more)
quant_lab/: .gitignore  .stock_list_cache.json  ai_config.py  aliases.sh  analyst_base.py  analyst_brain.py  analyst_brain_v2.py  analyst_cache.py  analyst_cached.py  analyst_core.py  analyst_core_enhanced.py  analyst_data.py  analyst_integration.py  analyst_integration_cached.py  analyst_openbb.py  data_cache.py  main.py  prompt_templates.py  pyproject.toml  quick_test.py  stock_finder.py  test_performance.py  valuation_analyzer.py  warm_up_cache.py
quant_lab/Report/251217/: 133747_Monitor_Report.md  144711_Monitor_Report.md  145424_Monitor_Report.md  151046_Monitor_Report.md  151059_Monitor_Report.md  215752_Monitor_Auto.md  221505_Monitor_Fast.md
quant_lab/Report/251218/: 140450_Stock_002920_Fast.md  142050_Stock_002683_Deep.md  150131_Stock_688568_Deep.md  150448_Stock_300348_Deep.md  174553_Monitor_Auto.md  181951_Monitor_Auto.md
quant_lab/Report/251219/: 105331_Stock_600592_Deep.md  114857_Stock_688102_Deep.md  251219_141408_My列表_Fast.md
quant_lab/Report/251224/: 251224_174852_Erin列表_Deep.md  251224_200825_贵州茅台_估值分析.md
quant_lab/Report/251225/: 251225_115147_Dad列表_Auto.md  251225_120040_贵州茅台_估值分析.md  251225_124044_贵州茅台_估值分析.md  251225_131454_平安银行_估值分析.md  251225_131629_德赛西威_估值分析.md  251225_132055_东方财富_估值分析.md  251225_142052_贵州茅台_估值分析.md  251225_142504_中航光电_估值分析.md  251225_143311_龙溪股份_估值分析.md  251225_155055_My列表_Fast.md  251225_162451_Erin列表_Fast.md  251225_162819_Dad列表_Fast.md  251225_181029_西部超导_Deep.md  251225_181653_西部超导_Deep.md  251225_181728_西部超导_Deep.md  251225_181849_西部超导_估值分析.md  251225_182304_紫光国微_Deep.md  251225_182334_紫光国微_Deep.md  251225_182406_紫光国微_Deep.md  251225_182534_紫光国微_估值分析.md  251225_182703_中航高科_Deep.md  251225_182805_中航高科_Deep.md  251225_182824_中航高科_Deep.md  251225_183021_中航高科_估值分析.md  251225_183056_中航光电_Deep.md  251225_183136_中航光电_Deep.md  251225_183156_中航光电_Deep.md  251225_183308_中航光电_估值分析.md  251225_183759_广东宏大_Deep.md  251225_183825_广东宏大_Deep.md  251225_183845_广东宏大_Deep.md  251225_184004_广东宏大_估值分析.md  251225_184201_帝尔激光_Deep.md  251225_184231_帝尔激光_Deep.md  251225_184303_帝尔激光_Deep.md  251225_184413_帝尔激光_估值分析.md  251225_225234_平高电气_Deep.md  251225_225309_平高电气_Deep.md  251225_225336_平高电气_Deep.md  (+6 more)
quant_lab/api/: requirements.txt  test_api.py  test_payment.py
quant_lab/archive/: ai_analyst_cloud.py  ai_analyst_interactive.py  ai_analyst_pro.py  cleanup.sh  diagnose_akshare.py  test_news_fix.py  test_report_naming.py  trend_3years.py
quant_lab/core/: __init__.py  cli.py  config.py
quant_lab/docs/: 251217-AkShare接口调查报告v1.0.md  251217-三引擎方案实施报告v2.0.md  251217-报告存储说明v1.0.md  251217-新闻数据源对比分析v1.0.md  251217-新闻获取修复总结v1.0.md  251217-触发条件深度分析报告.md  251217-量化系统优化路线图v1.0.md  251217-项目清理总结v2.1.md  251221-指数代码修复报告v1.0.md  251221-文件清理建议v1.0.md  251221-缓存系统使用指南v1.0.md  251221-缓存系统集成报告v1.1.md  251221-项目文件整理报告v1.0.md  DEVELOPMENT_GUIDE.md  MVP商业化方案_个股报告.md  MVP开发计划.md  PCF优化成果报告V1.0.md  PCF优化成果报告V1.1.md  个股分析模式完整清单.md  使用手册-V2.0.md  使用手册-V3.0.md  商业化收费模式方案V1.0.md  数据准确性评估报告V1.0.md  数据来源可信性报告.md  系统优化方案V1.0.md
quant_lab/tests/: check_deepseek_health.md  diagnose_data_sources.md  diagnose_data_sources.py  diagnose_network.md  diagnose_network.py  example_main_enhanced.py  quick_test.py  test_api_simple.md  test_cache_integration.py  test_deepseek_timeout.md  test_fix_verification.py  test_performance.py  test_unified_integration.md
(+206 files in other folders)
