[project]
name = "quant-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.94",
    "anthropic>=0.49.0",
    "ddgs>=9.9.3",
    "markdown>=3.7",
    "matplotlib>=3.10.8",
    "openai>=2.11.0",
    "openbb>=4.6.0",
    "openbb-core>=1.5.9",
    "openbb-fred>=1.5.1",
    "openbb-yfinance>=1.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.49.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "questionary>=2.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["quant_lab/core/"]
exclude = [
    "data_cache\\.py$",
    "md2pdf_tool\\.py$",
    "analyst_.*\\.py$",
    "ai_config\\.py$",
    "main\\.py$",
    "valuation_analyzer\\.py$",
    "stock_finder\\.py$",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/v2"]
